--- a/life/index.html
+++ b/life/index.html
@@ -23,6 +23,8 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
+    let currentEditId = null;
+
     async function saveRecord() {
       const data = getFormData();
       if (!data) return;
@@ -60,6 +62,9 @@
       document.getElementById("label").value = "国語";
       document.getElementById("subject").value = "";
       document.getElementById("description").value = "";
+      currentEditId = null;
+      document.getElementById("saveBtn").style.display = "inline";
+      document.getElementById("updateBtn").style.display = "none";
     }
 
     async function deleteRecord(id) {
@@ -69,7 +74,7 @@
       }
     }
 
-    async function editRecord(id, data) {
+    function startEditRecord(id, data) {
       document.getElementById("date").value = data.date;
       document.getElementById("start").value = data.start;
       document.getElementById("end").value = data.end;
@@ -77,20 +82,19 @@
       document.getElementById("subject").value = data.subject;
       document.getElementById("description").value = data.description;
 
+      currentEditId = id;
       document.getElementById("saveBtn").style.display = "none";
-      const updateBtn = document.getElementById("updateBtn");
-      updateBtn.style.display = "inline";
+      document.getElementById("updateBtn").style.display = "inline";
+    }
 
-      updateBtn.onclick = async () => {
-        const updatedData = getFormData();
-        if (!updatedData) return;
+    async function updateRecord() {
+      const updatedData = getFormData();
+      if (!updatedData || !currentEditId) return;
 
-        await updateDoc(doc(db, "records", id), updatedData);
-        clearForm();
-        updateBtn.style.display = "none";
-        document.getElementById("saveBtn").style.display = "inline";
-        loadRecords();
-      };
+      await updateDoc(doc(db, "records", currentEditId), updatedData);
+      alert("更新しました！");
+      clearForm();
+      loadRecords();
     }
 
     async function loadRecords() {
@@ -108,11 +112,13 @@
       records.forEach((data) => {
         const el = document.createElement("div");
         el.className = "record-card";
+        const safeData = encodeURIComponent(JSON.stringify(data));
+
         el.innerHTML = `
           <div class="record-header">
             <span><b>${data.date}</b>｜${data.start}～${data.end}</span>
             <div class="record-actions">
-              <button onclick="editRecord('${data.id}', ${JSON.stringify(data)})">✏️</button>
+              <button data-id="${data.id}" data-raw='${JSON.stringify(data).replace(/'/g, "&apos;")}' class="editBtn">✏️</button>
               <button onclick="deleteRecord('${data.id}')">🗑️</button>
             </div>
           </div>
@@ -122,20 +128,28 @@
         `;
         recordsDiv.appendChild(el);
       });
+
+      document.querySelectorAll('.editBtn').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const id = btn.getAttribute("data-id");
+          const raw = JSON.parse(btn.getAttribute("data-raw").replace(/&apos;/g, "'"));
+          startEditRecord(id, raw);
+        });
+      });
     }
 
     window.deleteRecord = deleteRecord;
-    window.editRecord = editRecord;
 
     window.addEventListener("DOMContentLoaded", () => {
       loadRecords();
       document.getElementById("saveBtn").addEventListener("click", saveRecord);
+      document.getElementById("updateBtn").addEventListener("click", updateRecord);
     });
   </script>
 
   <style>
     body {
-      background: white;
+      background: #ffffff;
       font-family: 'Hiragino Kaku Gothic ProN', sans-serif;
       color: #333;
       padding: 20px;
@@ -143,10 +157,10 @@
     }
 
     .form-container {
-      background: #fffacd;
+      background: #ffffff;
       padding: 20px;
       border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
       max-width: 600px;
       margin: 0 auto 40px;
     }
@@ -166,10 +180,11 @@
       border-radius: 8px;
       box-sizing: border-box;
       transition: 0.2s border ease-in-out;
+      background-color: #fff;
     }
 
     input:focus, select:focus, textarea:focus {
-      border-color: #ffa;
+      border-color: #aaa;
       outline: none;
     }
 
@@ -177,23 +192,24 @@
       margin-top: 20px;
       padding: 10px 20px;
       border: none;
-      background: #ffd700;
+      background: #87ceeb;
       font-weight: bold;
       border-radius: 25px;
       cursor: pointer;
       transition: background 0.3s;
+      color: #fff;
     }
 
     button:hover {
-      background: #ffcd00;
+      background: #00bfff;
     }
 
     #updateBtn {
-      background: #87ceeb;
+      background: #32cd32;
     }
 
     #updateBtn:hover {
-      background: #00bfff;
+      background: #228b22;
     }
 
     .record-card {
@@ -202,8 +218,8 @@
       padding: 15px;
       margin: 10px auto;
       max-width: 600px;
-      background: #fdfdfd;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+      background: #ffffff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     }
 
     .record-header {
@@ -219,6 +235,7 @@
       font-size: 18px;
       cursor: pointer;
       margin-left: 5px;
+      color: #888;
     }
 
     .record-actions button:hover {
