--- a/life/index.html
+++ b/life/index.html
@@ -189,15 +189,15 @@
     }
 
     button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border: none;
-      background: #87ceeb;
-      font-weight: bold;
-      border-radius: 25px;
-      cursor: pointer;
-      transition: background 0.3s;
-      color: #fff;
+    margin-top: 20px;
+    padding: 10px 20px;
+    border: none;
+    background: #fffacd; /* ← ここを変更！ */
+    font-weight: bold;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: background 0.3s;
+    color: #333; /* 薄い背景なので文字色は黒に近く */
     }
 
     button:hover {
