--- a/life/index.html
+++ b/life/index.html
@@ -189,23 +189,24 @@
     }
 
     button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    border: none;
-    background: #fffacd; /* ← ここを変更！ */
-    font-weight: bold;
-    border-radius: 25px;
-    cursor: pointer;
-    transition: background 0.3s;
-    color: #333; /* 薄い背景なので文字色は黒に近く */
+      margin-top: 20px;
+      padding: 10px 20px;
+      border: none;
+      background: #fffacd; /* レモン色 */
+      font-weight: bold;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background 0.3s;
+      color: #333;
     }
 
     button:hover {
-      background: #00bfff;
+      background: #f0e68c;
     }
 
     #updateBtn {
       background: #32cd32;
+      color: #fff;
     }
 
     #updateBtn:hover {
