--- a/memo/index.html
+++ b/memo/index.html
@@ -1,10 +1,96 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>トップページ</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>メモアプリ</title>
 </head>
 <body>
-  <h1>kかかかかかか</h1>
+    <h1>メモアプリ</h1>
+    
+    <input type="text" id="memoInput" placeholder="新しいメモを入力">
+    <button onclick="addMemo()">メモを追加</button>
+    
+    <ul id="memoList"></ul>
+
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
+
+    <!-- Firebase 設定 -->
+    <script>
+      // Firebase 設定情報
+      const firebaseConfig = {
+        apiKey: "AIzaSyBtqi9l_tX008yxnz2PUe-Q2pUJ2G8w_-8",
+        authDomain: "hontani-hajime.firebaseapp.com",
+        projectId: "hontani-hajime",
+        storageBucket: "hontani-hajime.firebasestorage.app",
+        messagingSenderId: "101204510454",
+        appId: "1:101204510454:web:a6c5fe8482a7af69534ed7",
+        measurementId: "G-V4Y6B7EBRC"
+      };
+
+      // Firebase の初期化
+      const app = firebase.initializeApp(firebaseConfig);
+      const db = firebase.firestore(app);
+
+      // メモを追加する関数
+      function addMemo() {
+        const memoInput = document.getElementById('memoInput');
+        const memoText = memoInput.value.trim();
+
+        if (memoText !== "") {
+          // Firestore にメモを追加
+          db.collection("memos").add({
+            text: memoText,
+            timestamp: firebase.firestore.FieldValue.serverTimestamp()
+          }).then(() => {
+            memoInput.value = ""; // 入力欄をクリア
+            fetchMemos(); // メモを再表示
+          }).catch((error) => {
+            console.error("Error adding memo: ", error);
+          });
+        }
+      }
+
+      // Firestore からメモを取得して表示する関数
+      function fetchMemos() {
+        const memoList = document.getElementById('memoList');
+        memoList.innerHTML = ""; // 一度リストを空にする
+
+        // Firestore からメモを取得
+        db.collection("memos")
+          .orderBy("timestamp", "desc")
+          .get()
+          .then((querySnapshot) => {
+            querySnapshot.forEach((doc) => {
+              const memo = doc.data();
+              const li = document.createElement("li");
+              li.textContent = memo.text;
+
+              // メモ削除機能
+              const deleteButton = document.createElement("button");
+              deleteButton.textContent = "削除";
+              deleteButton.onclick = () => deleteMemo(doc.id);
+              li.appendChild(deleteButton);
+
+              memoList.appendChild(li);
+            });
+          });
+      }
+
+      // メモを削除する関数
+      function deleteMemo(id) {
+        db.collection("memos").doc(id).delete().then(() => {
+          fetchMemos(); // 削除後にメモを再表示
+        }).catch((error) => {
+          console.error("Error deleting memo: ", error);
+        });
+      }
+
+      // ページが読み込まれた時にメモを表示
+      window.onload = fetchMemos;
+    </script>
 </body>
 </html>
