--- a/memo/index.html
+++ b/memo/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Firebase メモアプリ</title>
+  <title>メモアプリ</title>
 </head>
 <body>
   <h1>メモアプリ</h1>
